--- a/zips/plugin.video.ccloud.tv/changelog.txt
+++ b/zips/plugin.video.ccloud.tv/changelog.txt
@@ -1,3 +1,6 @@
+[B]1.7.5[/B]
+- Added repos.zip
+- Added YouTube Mode selection.
 [B]1.7.4[/B]
 - Updated addDir module for calling script add-ons such as Navi-X and Backup.
 [B]1.7.3[/B]
